*gitlab-workhorse-3.2.0 (06 Nov 2017)

  06 Nov 2017; Manuel Friedli <manuel@fritteli.ch>
  +gitlab-workhorse-3.2.0.ebuild, gitlab-workhorse-1.4.2.ebuild,
  gitlab-workhorse-1.4.3.ebuild, gitlab-workhorse-2.0.0.ebuild,
  gitlab-workhorse-2.1.1.ebuild, gitlab-workhorse-2.3.0.ebuild,
  gitlab-workhorse-3.0.0.ebuild:
  www-servers/gitlab-workhorse:  Add version 3.2.0.

*gitlab-workhorse-3.0.0 (25 Jul 2017)

  25 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
  +gitlab-workhorse-3.0.0.ebuild:
  www-servers/gitlab-workhorse:  Add latest version of gitlab-workhorse

*gitlab-workhorse-2.3.0 (09 Jul 2017)

  09 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
  +gitlab-workhorse-2.3.0.ebuild:
  www-servers/gitlab-workhorse:  Add ebuild for gitlab-workhorse-2.3.0

  09 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
  -gitlab-workhorse-1.2.1-r1.ebuild, -gitlab-workhorse-1.3.0-r1.ebuild:
  www-servers/gitlab-workhorse:  Purge obsolete versions.

*gitlab-workhorse-2.1.1 (17 Jun 2017)

  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch>
  +gitlab-workhorse-2.1.1.ebuild:
  www-servers/gitlab-workhorse:  Add version 2.1.1

*gitlab-workhorse-1.2.1-r1 (29 Mar 2017)
*gitlab-workhorse-1.3.0-r1 (29 Mar 2017)
*gitlab-workhorse-1.4.1-r1 (29 Mar 2017)
*gitlab-workhorse-1.4.2 (29 Mar 2017)

  29 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-fix-Makefile.patch, +gitlab-workhorse-1.2.1-r1.ebuild,
  +gitlab-workhorse-1.3.0-r1.ebuild, +gitlab-workhorse-1.4.1-r1.ebuild,
  +gitlab-workhorse-1.4.2.ebuild, -files/fix-Makefile-1.2.1.patch,
  -files/fix-Makefile-1.3.0.patch, -files/fix-Makefile-1.4.1.patch,
  -gitlab-workhorse-1.2.1.ebuild, -gitlab-workhorse-1.3.0.ebuild,
  -gitlab-workhorse-1.4.1.ebuild:
  dev-vcs/gitlab-workhorse:  Added ebuild for gitlab-workhorse-1.4.2 and finally
  cleaned up the fix-makefile-patch mess.

*gitlab-workhorse-1.4.1 (13 Mar 2017)

  13 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/fix-Makefile-1.4.1.patch, +gitlab-workhorse-1.4.1.ebuild: