@@ -8,6 +8,7 @@ DIST gitlab-workhorse-2.1.1.tar.bz2 658851 SHA256 ab827cfa89f5d3e711357a0317a022
 DIST gitlab-workhorse-2.3.0.tar.bz2 673735 SHA256 61dc7ea978223a56e5f2e4617195e43c9e3179f0057e416545060143ea90ae0e SHA512 290713086d8c30fbbc80d32b6924368ceffceb08fc9330403250b775bab20454d5843bfd7b37c1d88fa60d1bebd5b14d7e8bb6b3557142b56b1d9ab02ce46aee WHIRLPOOL a1507a68c06d7335e5fdae4cbb91b01ddcc9d7c988758fd892676c6a78c9746c6f1fa89fe369efdd2352f85c7dade00554263e1a969ce10dfc87983c3136bf6f
 DIST gitlab-workhorse-3.0.0.tar.bz2 678497 SHA256 6a72db70a49c4004881b4e5e727ac088e6b976144466b1e7a5362eb720bcb546 SHA512 25be040a20948a2e82e56e531ed030174a7c0dead542b998a70213aeed4a565eebc6e206fed202d52c538781f25715b93c5dd9708171addb222d13be4c49bb55 WHIRLPOOL 07d3d17bf1d7318fce000fbd8da4d4d8f47040b3ac92efe955ae84ccc9636eb0d8a86816b59caf717848340f53b43d0724bb577d143e2a4524a24eea5e48e33a
 DIST gitlab-workhorse-3.2.0.tar.bz2 700671 SHA256 4a38d307b7b5a61f74078000614b2b3e2730fd637da5477a58d7f7efe9ce7008 SHA512 6f971f17516d6ed7f74779656813959cfe0d588a9a0bd81f925146f5f2d64104c2b0472032a6d7c0dee3ea3f2755fa8127cee80af717dbc9174d8a12d437df5e WHIRLPOOL 3132f046cbf73ebcc648283f6e9eec38326043166ae2bbca19168801304122c45478f3e8aaf94c1b8af25b9a3a379bc10c7a7ef291fbaa07a108e0e6869c3a8e
+DIST gitlab-workhorse-3.3.1.tar.bz2 762376 SHA256 2ddbd4e0ad3db85fffdc8b932d1745f3066c8e366f6aebf2189f7b8200811207 SHA512 d08c72e400a356092c93abc261f9043cfbb5fce176a1c96410079929109e3f9cb629ad702193575dcae3c6e3cf790e840f6ddcb16cad352081833224f198571e WHIRLPOOL 38f787db574753fa51e506ec6d3fbc432cbeefcf966c89fe3cb884abead0760628641753c8406d0de32958f3a0e70c55b9417c31aa1ba04451ac94c0cc0970f2
 EBUILD gitlab-workhorse-1.4.2.ebuild 1012 SHA256 c619e29723a64caea3d7e3105c686e4e138bd35318af847440f14ace48fbb8b7 SHA512 7485fc018ea6cadabdeca8c89787d0c1103c46cb635282d8bc48fd801a693450cd50d3e899f68d29ee3043281551405b5fe9777e1b620ca0519e913f68e8a5b8 WHIRLPOOL 15fa160b642d90b8c13b846428c8ea74ba17617c74aac71ccd434fdadbbf5c8049bfdfd08aec034b1c18c8da10d52a41ec4e10f64da680a5d37f8ecdb90b8d81
 EBUILD gitlab-workhorse-1.4.3.ebuild 1012 SHA256 e82630ed25d51514b4e6638b6f49777ff00cdc2f93a8a7d4d6ab87655b5734d3 SHA512 a760e43573b7e8202f2e5fe6c481fb0376816b3d45ddd93205aa2798f510297632f80341c3e77ad1700f7ddfbac7e591d97834505f71466e7af67a0c5135e527 WHIRLPOOL 8f63a99b538eb4c88e76171bde90ea7bf2ed5b87b9b2e5fe6293fb01b1f6b4f81def5e02307e07896e5f3e0e47b4d550b9d9d28b1991032c608f5bbe0a21eb05
 EBUILD gitlab-workhorse-2.0.0.ebuild 1012 SHA256 4bf03b159710c22996450e9141b42e846e206433cd1f1d3ac52ada84996d8edd SHA512 5899843cbd910cf293f5d33ed4ffbfd5075d54d547d4d9f14d425b12ff81bd95fac54d258239cbae9845f7898daad796e38966a021414e321bd37a4ecbccbfd0 WHIRLPOOL 2c345b6cb8939cf97721701fedb00574699dd3b87a88d726e532c6c3db46c405e2bff2474a84da235b231295aef6e70924f624d35efb0844130f3b2881ae05a2
@@ -15,5 +16,6 @@ EBUILD gitlab-workhorse-2.1.1.ebuild 1012 SHA256 166a2cba843736735ab232b3bd0008b
 EBUILD gitlab-workhorse-2.3.0.ebuild 1012 SHA256 088c7d911e144a8a55889dfcdfab84126d2ee28df1d5a3e566856a1ceb1f0dfc SHA512 d95868b8033f518b96d9401e07a4dbe81b380114e4c5907c89e73f6ca820440d4b7471dded25407d4cc817dbbbcf348943f72c251bebf06c866aa9bc91f1a3ff WHIRLPOOL c4774879016f5952463ad7c231ca42b8e34999aaa7db60e2358e15b3ae864316e559213b8166fde0aeed6afb0fc8aa3ba89ca0b7a1247e19377ebf52c8f0a39f
 EBUILD gitlab-workhorse-3.0.0.ebuild 1012 SHA256 cd7d9f593221b3ef2baeea527060ef56178a71332af7a5bdfcd6285c49c9f329 SHA512 7c9d1bf373e2557b6a01f8fecfacf142322fed91cebc462a249f7cb1e02a953d4fd6bce2e8283adb6a9060c9a0cb2e7cb1b99da8a1926210c3d580589643fe0b WHIRLPOOL 61521ad8c87744395ada1300c5d3d237b2b356dd874232f371eb7ed2a6a90b29155cad810953a3f82d872318bbad6fb164fc9ac80a836a9d42326bb651e2a797
 EBUILD gitlab-workhorse-3.2.0.ebuild 1012 SHA256 4dc3f893683d0fab13d4c0d43090df4bdcd5543dff4ca74940999cb797aa7312 SHA512 199d418e6a1e60b183a16f28f08cc20fa67771395d9f2da741227f102d40d71d91a5c27bb8d9741995a2aa117111dbffe6bea9ef854f3c35bb41ed81045ab88d WHIRLPOOL 07f534716e45600c9bb9912c1f7beca402067df7b572965e08e431f922327de541614952b37ec126bcb7bb6ae8d66fe4084f4183d75d2e686fd6888a4b866ea5
-MISC ChangeLog 7733 SHA256 363b495dfa6196da200b85afbd4e97e9bb30a7ce92d8f94fd2d918432d468921 SHA512 1c3fba3339a88816d78f25376d3f69b24d8dea4dd488b614c4013ed46d7867ada6a95745662f5f99790830eedf5f940a62e0a8f8ba6e1422fdfca86a1b721df6 WHIRLPOOL 239fb4cb3a9757164cac2735f96f817c73dfd26534ee58eb4b6a9e895605721f9890b7ca84c1b8b0611e4d7f12ac87432ba8ed6128773b8e356164dc0ce7e95f
+EBUILD gitlab-workhorse-3.3.1.ebuild 1012 SHA256 8e4f366570bcb05c2f6ee0d0a10787bea24210325db9b02e19c13188ddb1aded SHA512 0d1342b15450b3220490655e4951230aa168c5ce1bd0d77d4a6a7f25cb507563e9b58d590bc55b74f68bb0ee25c792bf39b90aea3709d2c2bbb42aac473ad5aa WHIRLPOOL 364597c47e6cb0a466b151eab5034eb963123b12d113bc354816521ded1aa48ca66d0d1d8ff310e2af35e3d180f5913dbeefbb757a7a24fe6c795d5bb2d563c8
+MISC ChangeLog 7920 SHA256 1e88322ceff54e173aac227e4e633350f4bae37ddd59114d842cd94521813315 SHA512 6a1bf827e972a5986e3dab46719001c39c56b04141e35e5080136a5f7f9bbd00fa3811d2f9453b23de491c5e54f507ecad2284bd36b7cb8e5d027509726bd649 WHIRLPOOL 8e36ffdbd4c3e7de5803322a2c3708f9910b1ae4a53397c482258eab0722c3ef70876475dac19f9989a2a3c9a9f7811799b36522b7db491164c811349dcd6519
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
